# Lab-info-II

./: README.md
Desktop/Practica-2/: CMakeLists.txt  Ejercicios tinkercad.txt  Problema-10.cpp  Problema-4.cpp  main.cpp
Desktop/Practica-2/Porblema-6/: CMakeLists.txt  main.cpp
Desktop/Practica-2/Problema-10/: CMakeLists.txt
Desktop/Practica-2/Problema-12/: CMakeLists.txt  main.cpp
Desktop/Practica-2/Problema-14/: CMakeLists.txt  main.cpp
Desktop/Practica-2/Problema-16/: CMakeLists.txt  main.cpp
Desktop/Practica-2/Problema-2/: main.cpp
Desktop/Practica-2/Problema-4/: main.cpp
Desktop/Practica-2/Problema-8/: CMakeLists.txt  main.cpp
Lab_1/: CMakeLists.txt  main.cpp  main.cpp.autosave
